fix: align text in contact information

--- a/singolo3.css
+++ b/singolo3.css
@@ -104,10 +104,9 @@ input[type="submit"] {
     font-size: 12px;
     margin-top: 8px;
     line-height: 22px;
-    word-break: break-all;
     padding-left: 2px;
+    text-align: justify;
     word-spacing: -0.23px;
-    letter-spacing: 0.0px;
 }
 
 .contacts {
